--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ transformers==4.50.0
 typing_extensions==4.12.2
 tzdata==2025.2
 urllib3==2.3.0
+validators==0.22.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 xgboost==3.0.0
